2004-10-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/fifo.scm: Update.

	* gnome/gw/glib-support.scm: Add return parameter overrides (Rotty).

	* gnome/gw/glib-support.c: Remove _wrap_g_io_channel_read_line wrapper.

2004-10-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/fifo.scm: New file.

2004-10-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/glib-support.c (_wrap_g_io_add_watch): New wrapper.

	* gnome/overrides/glib.defs (g_io_add_watch): New override.

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* Makefile.am: Don't install into guile's path, just use $prefix.

	* gnome.scm.in: Don't hack /usr/local. Add some comments.

	* package.ac: Add record_check.

2004-11-13  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (EXTRA_DIST): Dist VERSION.
	* VERSION: New file.

2004-11-11  Andy Wingo  <wingo@pobox.com>

	* gnome.scm.in (usr-local-hack): Fix..

	* Makefile.am (guilesite): Argh, get the inst dir right.

	* package.ac: Avoid readlink -f, be more portable.

	* gnome.scm.in: New file, basically does what guile-gnome-0 does,
	but from within scheme.

	* Makefile.am: Add rules so that gnome-$version.scm looks right
	both installed and uninstalled. Install to the system guile path,
	regardless of the $prefix of guile-gnome. Build . before subdirs.

	* gnome/gw/glib-spec.scm (unwrap-value-cg): Whoops, fix parens.

	* gnome/gw/support/defs.scm (type-lookup): Assume that the caller
	owns generated container types (i.e. GList) if 'const isn't set.
	Prevents some invalid frees, hanks to Patrick Bernaud for the
	report.
	
	* gnome/gw/glib-spec.scm (unwrap-value-cg): Use destroy-value-cg
	to free the list after unwrapping.

2004-11-09  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gobject.scm (custom-wrap-decls)
	(wrap-custom-pointer!): New exported macros, designed to simplify
	wrappings of c types represented by native scheme values.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* defs-checks.ac: Versioned pkg-config check.
