@@ -1,3 +1,10 @@
+2004-11-15  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/glib-support.c: Fix includes.
+	(scm_init_glib): Lookup the iochannel type when glib is
+	initialized.
+	(g_io_func): Don't lookup the type all the time.
+
 2004-10-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* examples/fifo.scm: Update.
